--- a/app/src/main/res/layout/activity_display_word.xml
+++ b/app/src/main/res/layout/activity_display_word.xml
@@ -23,12 +23,13 @@
         />
 
     <Button
-        android:id="@+id/btnBack"
+        android:id="@+id/btnAdd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Back"
+        android:text="Add Words"
         android:textSize="20dp"
         />
+
 
     <ListView
         android:id="@+id/lstWord"
