--- a/app/src/main/res/layout/activity_meaning.xml
+++ b/app/src/main/res/layout/activity_meaning.xml
@@ -19,4 +19,21 @@
         android:textColor="@android:color/holo_blue_light"
         />
 
+    <Button
+        android:id="@+id/btnUpdate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Update"
+        android:textSize="20dp"
+        />
+
+    <Button
+        android:id="@+id/btnDelete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete"
+        android:textSize="20dp"
+        />
+
+
 </LinearLayout>
